objects/Twitter_Follower__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Following__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Following?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Pic__c</fullName>
        <formula>IMAGE( Profile__c ,  Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profile Pic</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile__c</fullName>
        <label>Profile</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Twitter_Handle__c</fullName>
        <externalId>true</externalId>
        <label>Twitter Handle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Twitter_Id__c</fullName>
        <label>Twitter Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>followers_count__c</fullName>
        <label>followers_count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Twitter Follower</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Location__c</columns>
        <columns>Twitter_Handle__c</columns>
        <columns>Description__c</columns>
        <columns>Profile_Pic__c</columns>
        <columns>Following__c</columns>
        <columns>Twitter_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Followers Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Twitter Follower</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>